--- a/src/main/resources/templates/test2.html
+++ b/src/main/resources/templates/test2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Title</title>
 </head>
 <body>
-
+<p>测试页面2</p>
 </body>
 </html>
